--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,19 @@
+body {
+    font-family: 'Times New Roman', Times, serif;
+}
 h1 {
     text-align: center;
+    color: rebeccapurple;
+    font-size: 40px;
+}
+p {
+    font-size: larger;
+}
+li {
+    color:  rebeccapurple;
+    font-size: larger;
+}
+img {
+    width: auto;
+    height: 350px;
 }
